x.x.x
------------------
CHANGES:
- Added updating the list of projects to select a costumer in 
  InnoworkprojectsPanel. (Amanda Accalai)



1.5.1 - 2014/09/02
------------------
CHANGES:
- No more shows archived projects in new tickets or tickets without a set
  project. (Alex Pagnoni)
- Opened by and assigned to fields are automatically set to the current user
  when creating a new ticket. (Alex Pagnoni)
- Added project as item parent type. (Alex Pagnoni)

FIXES:
- Fixed tickets with empty title bug. (Alex Pagnoni)
- Fixed wrong no ACL policy. (Alex Pagnoni)
- Fixed missing labels in items search results. (Alex Pagnoni)
- Fixed missing relations in assignedto and openedby fields. (Alex Pagnoni)
- Fixed wrong panel name in dashboard widget that led the widget to be always
  visible. (Alex Pagnoni)



1.5.0 - 2014/02/02
------------------
NEW FEATURES:
- Added "Ticket type" field. (Alex Pagnoni)
- Added "Erase filter" button. (Alex Pagnoni)
- Added "task" tag. (Alex Pagnoni)

CHANGES:
- Layout improvements. (Alex Pagnoni)
- Moved field types from Innowork Project to Innowork Tickets. (Alex Pagnoni)
- Upgraded domain panels to new code style. (Alex Pagnoni)
- Changed innowork-core depency to version 3.3. (Alex Pagnoni)
- Removed the empty value from ticket fields, when there are list of values.
  (Alex Pagnoni)

FIXES:
- Fixed missing companies in tickets filter. (Alex Pagnoni)



1.4.0 - 2014/01/10
------------------
FIXES:
- Fixed not working filter for project field. (Alex Pagnoni)

NEW FEATURES:
- Added "Opened by" and "Assigned to" fields. (Alex Pagnoni)
- Added dashboard widget with user assigned tickets. (Alex Pagnoni)

CHANGES:
- Added wrap in tickets listing. (Alex Pagnoni)



1.3.1 - 2014/01/08
------------------
CHANGES:
- Removed ACL support. (Alex Pagnoni)
- Changed some labels. (Alex Pagnoni)



1.3 - 2008/10/25
----------------
CHANGES:
- Better layout in tickets list (Alex Pagnoni).



1.2 - 2004/07/15
----------------
NEW FEATURES: